# coursework6

./: .gitignore  LICENSE  Makefile  README.md  compose.yaml
migrations/: 20260511111604_users.sql  20260511140810_articles.sql  20260511144115_pdf_fid.sql  20260511150000_reviews.sql  20260511160000_article_description.sql
migrator/: Dockerfile
seaweedfs/: s3.json
web/: .gitignore  Dockerfile  go.mod  go.sum
web/cmd/web/: main.go
web/internal/auth/: auth.go
web/internal/data/: data.go
web/internal/handler/article/: handler.go
web/internal/handler/index/: handler.go
web/internal/handler/login/: get.go  post.go
web/internal/handler/profile/: handler.go
web/internal/handler/register/: get.go  post.go
web/internal/handler/review/: get.go  handler.go  post.go
web/internal/handler/submit/: get.go  post.go
web/internal/middleware/: auth.go
web/internal/model/: article.go  review.go  user.go
web/internal/repository/article/: repository.go
web/internal/repository/review/: repository.go
web/internal/repository/user/: repository.go
web/internal/s3/: client.go
web/internal/wiring/: wiring.go
web/static/: static.go
web/templates/: article.html  base.html  edit_profile.html  index.html  login.html  profile.html  profile_articles_partial.html  profile_reviews_partial.html  register.html  review.html  submit.html  submit_review.html
worker/: Cargo.toml  Dockerfile
worker/src/: compile.rs  db.rs  main.rs  s3.rs
